# haproxy-2.2

./: .envrc  .gitignore  CMakeLists.txt  Dockerfile  GNUmakefile  Makefile  build-haproxy-with-openshift-settings.sh  build-image.sh  flake.nix  package.nix
contrib/interposer/: README.md  accept.c  malloc.c  ocp-build.sh
include/haproxy/: connection-t.h  connection.h  task-t.h  task.h
include/openshift/: logconn.h  ocprintf.h
src/: check.c  haproxy.c  http_ana.c  proto_tcp.c  tcpcheck.c
src/openshift/: close.c  connect.c  logconn.c  ocprintf.c
